Permissions and new config
Added required client permissions for commands and created a new config.json file. Enviroinment is now set as process enviroinment and appropriate configuration is fetched based on it's value.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Discord bot",
   "main": "wokkibot.js",
   "scripts": {
-    "start": "node wokkibot.js"
+    "start": "set NODE_ENV=PRODUCTION&&node wokkibot.js",
+    "dev": "set NODE_ENV=DEVELOPMENT&&node wokkibot.js"
   },
   "author": "Wokki",
   "license": "ISC",
