New example without DB fields
DB fields are no longer required as it uses SQLite instead

--- a/config.js.example
+++ b/config.js.example
@@ -6,23 +6,11 @@
     "DEVELOPMENT": {
         "TOKEN": "",
         "ACTIVITY": "",
-        "PREFIX": "",
-        "DB": {
-            "HOST": "",
-            "USER": "",
-            "DB": "",
-            "PASS": ""
-        }
+        "PREFIX": ""
     },
     "PRODUCTION": {
         "TOKEN": "",
         "ACTIVITY": "",
-        "PREFIX": "",
-        "DB": {
-            "HOST": "",
-            "USER": "",
-            "DB": "",
-            "PASS": ""
-        }
+        "PREFIX": ""
     }
 }
