--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Discord bot",
   "main": "wokkibot.js",
   "scripts": {
-    "start": "set NODE_ENV=PRODUCTION&&node wokkibot.js",
-    "dev": "set NODE_ENV=DEVELOPMENT&&node wokkibot.js"
+    "start": "cross-env NODE_ENV=PRODUCTION node wokkibot.js",
+    "dev": "cross-env NODE_ENV=DEVELOPMENT node wokkibot.js"
   },
   "author": "Wokki",
   "license": "ISC",
   "dependencies": {
     "common-tags": "^1.6.0",
-    "discord.js": "hydrabolt/discord.js",
-    "discord.js-commando": "gawdl3y/discord.js-commando",
+    "discord.js": "discordjs/discord.js",
+    "discord.js-commando": "discordjs/Commando",
     "ffmpeg-binaries": "^3.2.2-3",
     "fs": "0.0.1-security",
     "lodash": "^4.17.5",
@@ -23,7 +23,11 @@
     "request": "^2.83.0",
     "simple-youtube-api": "^5.0.1",
     "sqlite": "^2.9.1",
+    "uws": "^9.148.0",
     "winston": "^2.4.0",
     "ytdl-core": "^0.20.2"
+  },
+  "devDependencies": {
+    "cross-env": "^5.1.4"
   }
 }
