--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "node-opus": "^0.2.7",
     "request": "^2.83.0",
     "simple-youtube-api": "^5.0.1",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "sqlite": "^2.9.1",
+    "systeminformation": "^3.47.0",
     "uws": "^9.148.0",
     "winston": "^2.4.0",
     "ytdl-core": "^0.20.2"
