--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "common-tags": "^1.8.0",
     "discord.js": "github:discordjs/discord.js",
     "discord.js-commando": "github:discordjs/Commando",
+    "ffmpeg-binaries": "^4.0.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
