--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "nedb": "^1.8.0",
     "node-opus": "^0.3.1",
     "simple-youtube-api": "^5.1.1",
+    "socket.io": "^2.1.1",
     "systeminformation": "^3.47.0",
+    "weather-js": "^2.0.0",
     "winston": "^3.1.0",
     "ytdl-core": "^0.28.0"
   }
