--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "github:discordjs/discord.js",
     "discord.js-commando": "github:discordjs/commando",
     "ffmpeg-binaries": "^4.0.0",
+    "moment": "^2.24.0",
     "opusscript": "0.0.6",
     "simple-youtube-api": "^5.1.1",
     "superagent": "^4.1.0",
