--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "discord.js-commando": "github:discordjs/commando",
     "ffmpeg-binaries": "^4.0.0",
     "moment": "^2.24.0",
-    "opusscript": "0.0.6",
+    "node-opus": "^0.3.1",
     "simple-youtube-api": "^5.1.1",
     "superagent": "^4.1.0",
     "weather-js": "^2.0.0",
