--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "color-name-list": "^4.7.0",
     "discord.js": "github:discordjs/discord.js",
     "discord.js-commando": "github:discordjs/commando",
     "ffmpeg-binaries": "^4.0.0",
