--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "Bot",
-  "version": "1.0.0",
-  "description": "",
+  "name": "wokkibot",
+  "version": "2.0.0",
+  "description": "Discord bot",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon bot.js"
+    "start": "NODE_ENV=PRODUCTION node index.js",
+    "dev": "NODE_ENV=DEVELOPMENT node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Wokki",
   "license": "ISC",
   "dependencies": {
-    "color-name-list": "^4.7.0",
+    "common-tags": "^1.8.0",
     "discord.js": "github:discordjs/discord.js",
-    "discord.js-commando": "github:discordjs/commando",
+    "discord.js-commando": "github:discordjs/Commando",
     "ffmpeg-binaries": "^4.0.0",
-    "moment": "^2.24.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "moment-duration-format": "^2.2.2",
+    "nedb": "^1.8.0",
     "node-opus": "^0.3.1",
     "simple-youtube-api": "^5.1.1",
-    "superagent": "^4.1.0",
+    "socket.io": "^2.1.1",
+    "systeminformation": "^3.47.0",
     "weather-js": "^2.0.0",
-    "winston": "^3.2.1",
-    "ytdl-core-discord": "^1.0.3"
+    "winston": "^3.1.0",
+    "ytdl-core": "^0.28.0"
   }
 }
