--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
-  "name": "wokkibot",
-  "version": "2.0.0",
-  "description": "Discord bot",
+  "name": "Wokkibot",
+  "version": "1.0.0",
+  "description": "A Discord bot",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=PRODUCTION node index.js",
-    "dev": "NODE_ENV=DEVELOPMENT node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Wokki",
+  "keywords": [],
+  "author": "Wokkipannu",
   "license": "ISC",
   "dependencies": {
-    "common-tags": "^1.8.0",
     "discord.js": "github:discordjs/discord.js",
-    "discord.js-commando": "github:discordjs/Commando",
+    "discord.js-commando": "github:discordjs/commando",
     "ffmpeg-binaries": "^4.0.0",
-    "lodash": "^4.17.11",
-    "moment": "^2.22.2",
-    "moment-duration-format": "^2.2.2",
-    "nedb": "^1.8.0",
+    "moment": "^2.24.0",
     "node-opus": "^0.3.1",
     "simple-youtube-api": "^5.1.1",
-    "socket.io": "^2.1.1",
-    "systeminformation": "^3.47.0",
     "weather-js": "^2.0.0",
-    "winston": "^3.1.0",
-    "ytdl-core": "^0.28.0"
+    "winston": "^3.2.1",
+    "ytdl-core-discord": "^1.0.3"
   }
 }
